feat: Implement mention notifications and UI improvements
This commit introduces the "mention" notification type, allowing users to be notified when they are tagged in posts or comments. It also includes several UI enhancements:
- Updated notification badge to display counts more clearly.
- Refined notification panel styling and icons for better clarity.
- Fixed a navigation bug in the sidebar by correcting `AppView.MESSAGES` to `AppView.CONVERSATIONS`.
- Added missing passthrough functions for room-related operations in `geminiService`.
- Minor bug fixes and UI adjustments across various components for a more polished user experience.
- Updated application name metadata.

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -1,3 +1,4 @@
+
 {
   "common": {
     "loading": "লোড হচ্ছে...",
@@ -209,6 +210,7 @@
     "comment_post_success": "আপনার মন্তব্য পোস্ট করা হয়েছে।",
     "comment_suspended": "আপনার মন্তব্য করার সুবিধা সাময়িকভাবে স্থগিত করা হয়েছে।",
     "like_success": "আপনি {{author}} এর পোস্টে লাইক দিয়েছেন।",
+    "error_generic": "দুঃখিত, আমি বুঝতে পারিনি। আবার বলবেন কি?",
     "error_mic_permission": "মাইক্রোফোনের অ্যাক্সেস প্রত্যাখ্যান করা হয়েছে। অনুগ্রহ করে ব্রাউজার সেটিংসে এটি সক্ষম করুন।",
     "error_mic_not_found": "মাইক্রোফোন পাওয়া যায়নি। অনুগ্রহ করে নিশ্চিত করুন এটি সংযুক্ত এবং সক্ষম আছে।",
     "error_no_speech_rec": "আপনার ব্রাউজারে স্পিচ রিকগনিশন সমর্থিত নয়।",
